Imported from https://cherishsantosh@github.com/cherishsantosh/EventCalenderPHP.git

--- a/project.config
+++ b/project.config
@@ -1,2 +1,22 @@
 [access]
 	inheritFrom = All-Projects
+[project]
+	description = Event Calender in PHP
+[access "refs/*"]
+	owner = group user/Santosh Shingare (cherishsantosh)
+[access "refs/for/refs/*"]
+	read = group user/Santosh Shingare (cherishsantosh)
+	push = group user/Santosh Shingare (cherishsantosh)
+	label-Code-Review = -2..+2 group user/Santosh Shingare (cherishsantosh)
+	label-Verified = -1..+1 group user/Santosh Shingare (cherishsantosh)
+	rebase = group user/Santosh Shingare (cherishsantosh)
+	removeReviewer = group user/Santosh Shingare (cherishsantosh)
+	submit = group user/Santosh Shingare (cherishsantosh)
+[access "refs/heads/*"]
+	read = group user/Santosh Shingare (cherishsantosh)
+	create = group user/Santosh Shingare (cherishsantosh)
+	push = +force group user/Santosh Shingare (cherishsantosh)
+	pushMerge = group user/Santosh Shingare (cherishsantosh)
+[access "refs/tags/*"]
+	push = group user/Santosh Shingare (cherishsantosh)
+	push = +force group user/Santosh Shingare (cherishsantosh)
